--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "forecast"
   ],
   "dependencies": {
-    "chalk": "^1.1.1",
-    "lodash": "^3.10.1",
-    "meow": "^3.3.0",
-    "request": "^2.61.0",
-    "update-notifier": "^0.6.0",
+    "chalk": "~1.1.1",
+    "lodash": "~3.10.1",
+    "meow": "~3.3.0",
+    "request": "~2.61.0",
+    "update-notifier": "~0.6.0",
     "yql": "~1.0.2"
   },
   "devDependencies": {
-    "ava": "^0.1.0",
-    "xo": "^0.7.1"
+    "ava": "~0.1.0",
+    "xo": "~0.11.2"
   },
   "xo": {
     "envs": [
