--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-sudo: false
 language: node_js
 node_js:
-  - '5'
   - '4'
-  - '0.12'
-  - '0.10'
+  - '5'
+  - '6'
+sudo: false
+script: "npm run coverage"
+after_success:
+  - cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
