--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": {
     "name": "Riyadh Al Nur",
     "email": "riyadhalnur@verticalaxisbd.com",
-    "url": "blog.verticalaxisbd.com"
+    "url": "https://verticalaxisbd.com"
   },
   "bin": {
     "weather": "cli.js"
@@ -29,23 +29,21 @@
     "cli-app",
     "cli",
     "weather",
-    "yahoo",
-    "forecast"
+    "temperature"
   ],
   "dependencies": {
-    "chalk": "~1.1.1",
-    "lodash": "~4.17.0",
-    "meow": "~3.7.0",
-    "request": "~2.81.0",
-    "update-notifier": "2.1.0",
-    "yql": "~1.0.2"
+    "axios": "0.17.1",
+    "chalk": "2.3.0",
+    "conf": "1.3.1",
+    "meow": "4.0.0",
+    "update-notifier": "2.3.0"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "coveralls": "2.11.16",
-    "eslint": "3.15.0",
+    "chai": "4.1.2",
+    "coveralls": "3.0.0",
+    "eslint": "4.12.0",
     "istanbul": "0.4.5",
-    "mocha": "3.2.0",
-    "mocha-lcov-reporter": "1.2.0"
+    "mocha": "4.0.1",
+    "mocha-lcov-reporter": "1.3.0"
   }
 }
