--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
     "coveralls": "3.0.0",
     "eslint": "4.12.0",
     "istanbul": "0.4.5",
