--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - '4'
   - '6'
   - '8'
-  - '9'
+  - '10'
+install:
+  - npm ci
 sudo: false
 script: "npm run coverage"
 after_success:
