Fix NPM installation on appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,10 @@ environment:
   - nodejs_version: "8"
   - nodejs_version: "10"
 
-build_script:
-  - npm i -g npm@latest
-
 install:
   - ps: Install-Product node $env:nodejs_version
+  - npm i -g npm@latest
+  - set PATH=%APPDATA%\npm;%PATH%
   - npm ci
 
 test_script:
