--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "weather-cli",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Check the weather for your city from your terminal",
   "license": "MIT",
   "repository": "riyadhalnur/weather-cli",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": {
     "name": "Riyadh Al Nur",
     "email": "riyadhalnur@verticalaxisbd.com",
     "url": "https://verticalaxisbd.com"
   },
   "bin": {
-    "weather": "cli.js"
+    "weather": "src/cli.js"
   },
   "engines": {
     "node": ">=10"
@@ -21,9 +21,9 @@
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec tests/tests.js -t 100000 && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "files": [
-    "index.js",
-    "cli.js",
-    "schema.js"
+    "src/index.js",
+    "src/cli.js",
+    "src/schema.js"
   ],
   "preferGlobal": true,
   "keywords": [
@@ -35,17 +35,17 @@
   "dependencies": {
     "axios": "0.19.2",
     "chalk": "3.0.0",
-    "conf": "6.2.0",
+    "conf": "6.2.1",
     "meow": "6.1.0",
     "update-notifier": "4.1.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "coveralls": "3.0.9",
+    "coveralls": "3.0.11",
     "eslint": "6.8.0",
     "istanbul": "0.4.5",
-    "mocha": "7.0.1",
+    "mocha": "7.1.1",
     "mocha-lcov-reporter": "1.3.0"
   }
 }
